# LynxOCR

./: .gitignore  CLAUDE.md  LICENSE  README-zh.md  README.md  index.html  package.json  pnpm-lock.yaml  screenshot.html  vite.config.ts
.github/workflows/: release.yml
.trae/documents/: markdown-render-export.md  mineru-integration-plan.md  ocr-api-service-plan.md  ocr-feature-plan.md
.trae/rules/: rules.md
docs/: API使用教程.md  ChangeLog.md  MinerU-README.md  MinerU_文档解析接口文档.md  OCR优化总结.md  Roadmap.md  内存优化方案.md  截图OCR实现原理.md  自定义模型下载地址.md  软件版本修改.md
src/: App.tsx  index.css  screenshot-main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: rebuild_ocr_zips.rs
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs  tests.rs
src-tauri/src/api/: mod.rs  server.rs  types.rs
src-tauri/src/commands/: api.rs  config.rs  mod.rs  model.rs  ocr.rs
src-tauri/src/config/: app_config.rs
src-tauri/src/engine/: mod.rs  model_manager.rs
src-tauri/src/engine/mineru/: mod.rs
src-tauri/src/engine/ocr/: mod.rs  types.rs
src/app/about/: page.tsx
src/app/api-settings/: page.tsx
src/app/ocr/: page.tsx
src/app/settings/: model-settings.tsx  page.tsx
src/components/: app-sidebar.tsx  site-header.tsx  title-bar.tsx  window-frame.tsx
src/components/ui/: progress.tsx  switch.tsx  textarea.tsx
src/lib/: app-context.tsx  tauri.ts
src/types/: index.ts
tools/: download_ppocr_v6.py  extract_cls.py  fix_dict.ps1  revert_dict.ps1
