[package]
name = "lynxocr"
version = "1.1.0"
description = "LynxOCR - Offline OCR Text Recognition"
authors = ["tabortao"]
edition = "2021"

[lib]
name = "lynxocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
tauri-plugin-log = "2"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# File handling
tempfile = "3"

# Zip extraction for model packages
zip = { version = "2", features = ["deflate", "xz"] }

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP download
ureq = { version = "2", features = ["tls"] }

# HTTP server (API)
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
base64 = "0.22"

# OCR (PaddleOCR via ONNX Runtime)
paddle-ocr-rs = "0.6"
ort = { version = "=2.0.0-rc.10", default-features = false }
num_cpus = "1.17"

image = { version = "0.25", features = ["webp"] }
rayon = "1.10"

# Screenshot (cross-platform screen capture)
xcap = "0.3"
tauri-plugin-clipboard-manager = "2"

# Clipboard
arboard = "3"

# Global shortcuts
tauri-plugin-global-shortcut = "2"

# Single instance
tauri-plugin-single-instance = "2"

# PDF rendering
pdfium-render = "0.8"

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 2
debug = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
strip = true
